--- a/client/src/sass/_base.scss
+++ b/client/src/sass/_base.scss
@@ -17,6 +17,14 @@ $color-grey-dark-2: #6d5d4b;
 $shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
 $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 
+// COLOR VARIABLES
+$color-secondary-light: #ffcc00;
+$color-secondary-dark: #eb4d55;
+
+// BORDER
+$border: 1px solid #f4f2f2;
+$border-dark: 2px solid #f4f2f2;
+
 html {
     box-sizing: border-box;
 }
