--- a/client/src/sass/_base.scss
+++ b/client/src/sass/_base.scss
@@ -11,7 +11,8 @@ $color-grey-light-1: #f9f7f6;
 $color-grey-light-2: #aaa;
 $color-grey-dark-1: #54483a;
 $color-grey-dark-2: #6d5d4b;
-
+$color-primary: #261e7d;
+$color-primary-dark: #0e0545;
 // SHADOW
 
 $shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
