--- a/client/src/sass/components/_navigation.scss
+++ b/client/src/sass/components/_navigation.scss
@@ -106,11 +106,21 @@
         fill: $color-grey-dark-2;
       }
     }
+  &__cart {
+    margin-left: 20px;
+    font-size: 1.2em;
+    position: relative;
 
-    &__cart {
-      margin-left: 20px;
-      font-size: 1.2em;
+   &__count {
+      position: absolute;
+      bottom: 18px;
+      left: 10px;
+      color: white;
+      background-color: $color-primary;
+      border-radius: 50%;
+      padding: 2px 10px;
     }
+  }
   }
 }
 
