Module 11 Part 5: Building Checkout Component

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -4,4 +4,5 @@
 @import "components/categories";
 @import "pages/description";
 @import "pages/basket";
-@import "pages/login"
+@import "pages/login";
+@import "pages/checkout"
