--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -2,6 +2,8 @@
 @import 'components/navigation';
 @import "components/course";
 @import "components/categories";
+@import "components/loading";
+
 @import "pages/description";
 @import "pages/basket";
 @import "pages/login";
