--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -7,4 +7,5 @@
 @import "pages/description";
 @import "pages/basket";
 @import "pages/login";
-@import "pages/checkout"
+@import "pages/checkout";
+@import "pages/dashboard";
