--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -10,4 +10,5 @@
 @import "pages/checkout";
 @import "pages/dashboard";
 @import "pages/lecture";
-@import 'pages/instructor'
+@import 'pages/instructor';
+@import 'pages/section-page';
