--- a/client/src/sass/pages/_dashboard.scss
+++ b/client/src/sass/pages/_dashboard.scss
@@ -10,7 +10,7 @@
       padding: 30px;
       justify-content: space-between;
 
-      @media only screen and (max-width: $bp-medium){
+      @media only screen and (max-width: $bp-large){
         flex-direction: column;
       }
   
