--- a/client/src/sass/components/_course.scss
+++ b/client/src/sass/components/_course.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   padding: 50px 20px;
   max-width: 1340px;
-  margin: 10px auto 0;
+  margin: auto;
 
   &__header {
     & h1 {
