--- a/client/src/sass/pages/_section-page.scss
+++ b/client/src/sass/pages/_section-page.scss
@@ -4,6 +4,7 @@
     max-width: 1240px;
     margin: 0 auto;
     padding: 50px;
+    height: auto;
   
     &__lectures {
       display: flex;
@@ -18,6 +19,8 @@
         width: 100%;
       }
     }
+
+    
   }
   
   .input-section {
